# aeromod

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  app.go  go.mod  go.sum  index.html  main.go  package.json  pnpm-lock.yaml  rustfmt.toml  turbo.json  wails.json
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: 1.bug_report.yml  2.feature_request.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: app.tsx  constants.ts  main.tsx  routeTree.gen.ts
apps/desktop/src/api/: addon.ts  ipc.ts  manifest.ts  onboarding.ts  settings.ts  types.ts
apps/desktop/src/components/: hint.tsx  mode-toggle.tsx  sidebar.tsx  theme-provider.tsx
apps/desktop/src/components/app-bar/: index.tsx  preset-menu.tsx
apps/desktop/src/features/addons/: api.ts  hooks.ts  types.ts
apps/desktop/src/features/onboarding/: api.ts  hooks.ts
apps/desktop/src/features/presets/: api.ts  hooks.ts  types.ts
apps/desktop/src/features/presets/components/: create-preset-modal.tsx
apps/desktop/src/features/scenery/: api.ts  hooks.ts  types.ts
apps/desktop/src/features/settings/: api.ts  hooks.ts  types.ts
apps/desktop/src/features/sim/: api.ts  hooks.ts
apps/desktop/src/hooks/: addon.tsx  confirm.tsx  onboarding.tsx  settings.tsx  use-event-listener.ts  use-get-addons.tsx  use-prompt.tsx
apps/desktop/src/lib/: react-query.ts  utils.ts
apps/desktop/src/routes/: __root.tsx  _app.tsx  index.tsx  onboarding.tsx  settings.tsx  verify.tsx
apps/desktop/src/routes/_app/: index.tsx  scenery.tsx  settings.tsx  statistics.tsx  tools.tsx  verify.tsx
apps/desktop/src/routes/_app/addons/: $addonId.tsx
apps/desktop/src/routes/addons/: $addonId.tsx
apps/desktop/src/styles/: main.css
crates/aeromod-bgl/: Cargo.toml
crates/aeromod-bgl/src/: lib.rs
crates/aeromod-core/: Cargo.toml
crates/aeromod-core/src/: addon.rs  lib.rs  manifest.rs  preset.rs  scenery.rs  sim.rs
crates/aeromod-fs/: Cargo.toml
crates/aeromod-fs/src/: extract.rs  lib.rs
crates/aeromod-settings/: Cargo.toml
crates/aeromod-settings/src/: lib.rs
crates/aeromod-tauri/: Cargo.toml  tauri.conf.json
crates/aeromod-tauri/src/: app.rs  lib.rs  main.rs  settings.rs
crates/aeromod-tauri/src/common/: addon.rs  manifest.rs  mod.rs  preset.rs  sim.rs
frontend/src/constants/: index.ts
internal/msfs/: client.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  settings.rs  utils.rs
src-tauri/src/common/: addon.rs
