[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.97"

aeromod-core = { path = "crates/aeromod-core" }
aeromod-fs = { path = "crates/aeromod-fs" }
aeromod-settings = { path = "crates/aeromod-settings" }
aeromod-bgl = { path = "crates/aeromod-bgl" }
