[package]
name = "aeromod"
version = "0.1.0"
description = "An external mod manager for Microsoft Flight Simulator"
authors = ["metebykl"]
edition = "2021"

[lib]
name = "aeromod_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.97"
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
junction = "1.2.0"
