[package]
name = "aeromod-bgl"
version = "0.0.0"
authors = ["metebykl"]
edition = "2021"
publish = false

[features]
serde = ["dep:serde"]

[dependencies]
byteorder = "1.5"

# dependencies for serialization (enabled by "serde" feature)
serde = { version = "1.0", optional = true, features = ["derive"] }
