[package]
name = "aeromod-core"
version = "0.0.0"
authors = ["metebykl"]
edition = "2021"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
walkdir = "2.5.0"
tempfile = "3.19.1"
base64 = "0.22.1"

aeromod-fs.workspace = true
aeromod-settings.workspace = true
