[package]
name = "aeromod-tauri"
version = "0.0.0"
description = "An external mod manager for Microsoft Flight Simulator"
authors = ["metebykl"]
edition = "2021"
publish = false

[lib]
name = "aeromod_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json = "1"
anyhow.workspace = true
tauri-plugin-dialog = "2"
walkdir = "2.5.0"
tempfile = "3.19.1"
base64 = "0.22.1"

aeromod-fs.workspace = true
