[package]
name = "aeromod-tauri"
version = "0.0.0"
description = "An external mod manager for Microsoft Flight Simulator"
authors = ["metebykl"]
edition = "2021"
publish = false

[lib]
name = "aeromod_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2.2.2"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tauri-plugin-dialog = "2"
walkdir = "2.5.0"
tempfile = "3.19.1"
base64 = "0.22.1"
sysinfo = "0.35.0"

aeromod-core.workspace = true
aeromod-fs.workspace = true
aeromod-settings.workspace = true
